# python-ai-chat

./: .editorconfig  README.md  docker-compose.yml  package.json
frontend/: package.json  vite.config.ts
frontend/src/: business.ts  main.ts
frontend/src/api/: base.ts  chat.ts  ingest.ts  users.ts
frontend/src/components/: ChatBox.vue  ChatMessages.vue  DocumentList.vue  FormCheckRadioGroup.vue  SectionMain.vue  SectionTitleLineWithButton.vue
frontend/src/interfaces/: Chat.ts  Ingest.ts
frontend/src/layouts/: LayoutAuthenticated.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  main.ts
frontend/src/styles/: config.ts  menuAside.ts
frontend/src/views/: ChatView.vue
server/: pyproject.toml
server/app/: __init__.py  main.py
server/app/config/: settings.py
server/app/dependencies/: auth.py  base.py  database.py  milvus_db.py  session.py
server/app/dependencies/components/: __init__.py  embedding.py  ingest.py  ingest_helper.py  llm.py  node_store.py  prompt_helper.py  vector_store.py
server/app/dependencies/open_ai/: openai_models.py
server/app/dependencies/services/: chat.py  chunks.py  embeddings.py  ingest.py
server/app/middleware/: session.py
server/app/models/: chats.py
server/app/routes/: __init__.py  auth.py  chat.py  ingest.py
server/app/routes/ui/: auth.py  dashboard.py
server/app/templates/: tailwind.config.js
server/app/templates/layouts/: authenticated.html  base.html
server/app/templates/views/: chat.html  login.html
server/development/: populate.py  setup_llm.py
