[tool.poetry]
name = "rag-python"
version = "0.1.0"
description = "Backend service to interact with an AI RAG"
authors = ["Michael Bailey <mbailey1302@gmail.com>"]
license = "Propietary"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
structlog = "^24.1.0"
python-jose = "^3.3.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
beanie = "^1.25.0"
asgi-correlation-id = "^4.2.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
pydantic = {version = "^2.6.4", extras = ["email"]}
pydantic-settings = "^ 2.2.1"
python-multipart = "^0.0.9"
fastapi = "0.110.1"
redis = "^5.0.3"
pymilvus = "^2.4.0"
llama-index = "0.10.26"
transformers = "^4.39.3"
llama-cpp-python = "^0.2.19"
torch = "^ 2.2.2"
boto3-stubs = {version = "^1.34.69", extras = ["s3"]}
pypdf = "4.1.0"
llama-index-vector-stores-milvus = "^0.1.6"
llama-index-llms-llama-cpp = "^0.1.3"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-core = "^0.10.26"
llama-index-storage-docstore-redis = "^0.1.2"
llama-index-storage-index-store-redis = "^0.1.2"
llama-index-llms-ollama = "^0.1.4"
llama-index-embeddings-ollama = "^0.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
isort = "^ 5.13.2"
flake8 = "^6.0.0"
faker = "^17.6.0"
black = "^23.12.1"
mypy = "^1.9.0"
httpx = "^0.24.1"
moto = "^4.2.14"

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"
in-project = true
